# Chaos_Infused_Microservices_App

./: Jenkinsfile  docker-compose.yaml  project_guide.md
app/: Dockerfile  chaos_backend.db  main.py  pyproject.toml  requirements.txt
grafana/provisioning/datasources/: datasources.yaml
k8s/: development.yaml  service.yaml
loki/: config.yaml
prometheus/: prometheus.yaml
promtail/: config.yaml
